feat: SE agrego autenticación de clientes, gestión de cuentas, detalles de proyectos y funcionalidad de botón flotante de WhatsApp.
